--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.9.8",
+    "@mui/material": "^5.10.6",
     "firebase": "^9.6.8",
     "flutterwave-react-v3": "^1.2.0",
     "framer-motion": "^6.2.8",
-    "next": "12.1.0",
+    "next": "^12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.36.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@iconify/react": "^3.1.4",
