--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.8",
+    "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "axios": "^0.27.2",
     "firebase": "^9.6.8",
     "flutterwave-react-v3": "^1.2.0",
     "framer-motion": "^6.2.8",
