--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
-    "axios": "^0.27.2",
     "firebase": "^9.6.8",
     "flutterwave-react-v3": "^1.2.0",
     "framer-motion": "^6.2.8",
-    "next": "^12.1.0",
+    "next": "^12.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.36.1",
-    "yup": "^0.32.11"
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@iconify/react": "^3.1.4",
